fix bug long links can break the layout

--- a/_scss/site/_layout.scss
+++ b/_scss/site/_layout.scss
@@ -121,6 +121,10 @@ table {
     }
 }
 
+a {
+    @include hyphens();
+}
+
 a[target="_blank"]:not(.no-underline) {
     position: relative;
     text-decoration: none;
